Signage: shift SMOOTH comment bubble further left to avoid product overlap

--- a/signage/style.css
+++ b/signage/style.css
@@ -59,7 +59,7 @@ body {
   animation-delay: -1s;
 }
 .sg-comment-smooth {
-  left: 11%;
+  left: 7%;
   top: 40%;
 }
 @keyframes bubble-float {
